<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="5">

    <TextView
        android:id="@+id/text_option_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_option_text_color" />

    <TextView
        android:id="@+id/text_option_text_background_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_option_text_background_color" />

    <TextView
        android:id="@+id/text_option_text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_option_text_bold" />

    <TextView
        android:id="@+id/text_option_text_underline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_option_text_underline" />

    <TextView
        android:id="@+id/text_option_text_middleline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_option_text_middleline" />
</LinearLayout>